--- a/css/main.css
+++ b/css/main.css
@@ -234,7 +234,7 @@ summary::marker {
     left: 0;
     bottom: 0;
     text-align: center;
-    background-color: #fff;
+    background-color: #4660e8;
     background-position: right;
     opacity: 0;
     z-index: -1;
@@ -292,7 +292,6 @@ summary::marker {
 .mobile-nav .nav__link {
     opacity: 0;
     transform: translateY(-10px);
-    color: #fff;
 }
 
 .mobile-nav.is-open a {
@@ -352,7 +351,7 @@ summary::marker {
 	width: 28px;
 	height: 4px;
 	margin: 0 auto;
-	background: #fff;
+	background: #000B44;
 	transform: skew(5deg);
 	transition: all .275s;
 }
@@ -362,7 +361,7 @@ summary::marker {
 	content: '';
 	display: block;
 	height: 100%;
-	background: #fff;
+	background: #000B44;
 	transition: all .275s;
 }
 
@@ -377,12 +376,12 @@ summary::marker {
 /* Toggle State part */
 .is-open .burger {
 	transform: skew(5deg) translateY(-8px) rotate(-45deg);
-    background: #FDF1F1;
+    background: #000B44;
 }
 
 .is-open .burger:before {
 	transform: translateY(0px) skew(-10deg) rotate(75deg);
-    background: #FDF1F1;
+    background: #000B44;
 }
 
 .is-open .burger:after {
@@ -400,11 +399,11 @@ summary::marker {
 	text-transform: uppercase;
 	font-weight: 500;
 	text-align: center;
-	color: #fff;
+	color: #000B44;
 }
 
 .is-open .burger-text {
-    color: #FDF1F1;
+    color: #000B44;
 }
 
 .no-scroll {
@@ -836,10 +835,6 @@ summary::marker {
     .mint__info-img {
         max-width: 109px;
     }
-
-    .mint__inner {
-        margin-top: 100px;
-    }
 }
 
 
@@ -1040,6 +1035,10 @@ summary::marker {
         margin-right: 35px;
     }
 
+    .about__info-item:nth-child(3) {
+        margin-right: 0;
+    }
+
     .about__info-item:nth-child(4) {
         margin-top: 30px;
     }
@@ -1183,7 +1182,7 @@ summary::marker {
     text-align: center;
     background: linear-gradient(225.17deg, #67B9DB 28.66%, #67DBB6 73.54%);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: rgba(255,255,255,0);
 }
 
 @media (max-width: 990px) {
@@ -1786,7 +1785,7 @@ summary::marker {
     }
 
     .footer__terms {
-        font-size: 18px;
+        font-size: 14px;
     }
 
     .footer__adress {
