--- a/css/main.css
+++ b/css/main.css
@@ -1143,6 +1143,10 @@ summary::marker {
     display: none;
 }
 
+.counter-small {
+    display: none;
+}
+
 .counter p {
     position: absolute;
     top: calc(50% - 57px);
@@ -1253,6 +1257,29 @@ summary::marker {
 
     .map::before {
         bottom: 463px;
+    }
+
+    .counter-mobile {
+        display: none;
+    }
+}
+
+@media (max-width: 430px) {
+    .counter-small {
+        display: block;
+    }
+
+    .counter {
+        height: 230px;
+        width: 230px;
+    }
+
+    .counter p {
+        font-size: 60px;
+        top: calc(57% - 52px);
+        left: calc(60% - 79px);
+        background: none;
+        -webkit-text-fill-color: #67DBB6;
     }
 }
 
