--- a/css/whitelist.css
+++ b/css/whitelist.css
@@ -18,7 +18,7 @@ body {
     padding: 180px 0;
     border: 20px solid #000;
     border-image: url(https://static.wixstatic.com/media/fc1ef4_deb28715cd2a4986a56ef441fc13cfa1~mv2.png/v1/fill/w_1440,h_147,al_c,q_85,usm_0.66_1.00_0.01/fc1ef4_deb28715cd2a4986a56ef441fc13cfa1~mv2.webp) 20 20 / 20px 20px / 0rem;
-    height: 900px;
+    height: 789px;
     overflow: hidden;
 }
 
@@ -62,7 +62,7 @@ body {
     position: relative;
     display: inline-block;
     padding: 25px 30px;
-    margin: 40px 0;
+    margin: 150px auto 0;
     color: #000;
     font-weight: 700;
     text-decoration: none;
