--- a/css/main.css
+++ b/css/main.css
@@ -199,6 +199,12 @@ summary::marker {
     margin-right: 0;
 }
 
+.header .socials-item:last-child img {
+    width: 35px;
+    height: 35px;
+    margin-left: 10px;
+}
+
 .socials-item a {
     display: flex;
     justify-content: center;
@@ -435,6 +441,20 @@ summary::marker {
     .mobile__nav-wrapper {
         display: block;
     }
+    
+    .mobile__nav-wrapper .socials-item {
+        margin: 10px 50px 0 0;
+    }
+
+    .mobile__nav-wrapper .socials-item img {
+        width: 25px;
+        height: 25px;
+    }
+
+    .mobile__nav-wrapper .socials-item {
+        margin-top: 0;
+    }
+
 }
 
 @media (max-width: 490px) {
@@ -681,6 +701,7 @@ summary::marker {
 }
 
 .mint__calc-btn {
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -731,6 +752,7 @@ summary::marker {
 }
 
 .mint__btn {
+    cursor: pointer;
     margin: 40px auto 0;
     width: 234px;
 }
