--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,12 @@ summary::marker {
         Common Styles 
 ==========================*/
 
+.body__mint {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+
 .title {
     font-family: 'Lato', sans-serif;
     font-size: 64px;
@@ -214,10 +220,35 @@ summary::marker {
     transition: all 0.8s;
 }
 
+.socials-item a:first-child {
+    width: auto;
+    height: 35px;
+}
+
+.btn-socials {
+    font-size: 14px;
+    border-radius: 25px;
+    padding: 10px 20px;
+    margin-right: 10px;
+}
+
+.btn-socials:hover {
+    opacity: 1 !important;
+}
+
 .socials-item a:hover {
     opacity: 0.4;
     transition: all 0.8s;
 }
+
+.socials-btns {
+    display: flex;
+}
+
+.socials-btns .socials-item:first-child {
+    margin-right: 0;
+}
+
 
 /* MOBILE NAV */ 
 
@@ -474,6 +505,11 @@ summary::marker {
         margin-top: 200px;
     }
 
+    .btn-socials {
+        font-size: 10px;
+        padding: 5px 10px;
+    }
+
 }
 
 /*========================
@@ -677,7 +713,7 @@ summary::marker {
 }
 
 .mint__inner {
-    margin-top: 150px;
+    margin-top: 250px;
 }
 
 .mint__info {
@@ -777,6 +813,11 @@ summary::marker {
 }
 
 @media (max-width: 768px) {
+
+    .mint__inner {
+        margin-top: 200px;
+    }
+
     .mint__info-img {
         max-width: 210px;
     }
@@ -814,6 +855,11 @@ summary::marker {
 }
 
 @media (max-width: 490px) {
+
+    .mint__inner {
+        margin-top: 140px;
+    }
+
     .mint__btn {
         width: 135px;
         font-size: 13px;
@@ -831,6 +877,15 @@ summary::marker {
 }
 
 @media (max-width: 429px) {
+
+    .mint::before {
+        background: none;
+    }
+
+    .mint .title {
+        font-size: 30px;
+    }
+
     .mint__info-img {
         max-width: 109px;
     }
@@ -1581,6 +1636,7 @@ summary::marker {
     display: flex;
     justify-content: space-between;
     margin-top: 60px;
+    align-items: center;
 }
 
 .faq__accordion {
@@ -1685,6 +1741,10 @@ summary::marker {
     position: relative;
     padding-bottom: 45px;
     margin-top: 100px;
+}
+
+.footer__mint {
+    margin-top: 200px;
 }
 
 .footer::before {
