--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ summary::marker {
     font-weight: 700;
     font-size: 19px;
     text-transform: uppercase;
+    border: none;
     border-radius: 20px;
     color: #fff;
     background: linear-gradient(84.14deg, #5EA9C8 1.66%, #90D0EB 99.65%);
@@ -678,6 +679,15 @@ summary::marker {
 
 .mint__inner {
     margin-top: 150px;
+}
+
+.mint__counter {
+    padding: 30px 0;
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    color: #67B9DB;
+    text-align: center;
 }
 
 .mint__info {
