--- a/css/main.css
+++ b/css/main.css
@@ -1978,7 +1978,7 @@ summary::marker {
 ==========================*/
 
 .popup {
-    position: absolute;
+    position: fixed;
     z-index: 100;
     top: 0;
     left: 0;
